# migration

./: .gitignore  CI-DOCKER.md  DEPLOYMENT_REQUIREMENTS.md  DOCKER.md  Dockerfile  OFFLINE_SETUP.bat  OFFLINE_SETUP.sh  README.md  docker-compose.yml  push_offline_update.bat  pyproject.toml  requirements.txt
config/: migration.example.yaml  migration.yaml
scripts/: preflight_check.sh
vmigrate/: __init__.py  batch.py  batch_cli.py  cli.py  config.py  logging_setup.py  metrics.py  state.py
vmigrate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vmigrate/conversion/: __init__.py  qemu_img.py  virt_v2v.py
vmigrate/migration/: __init__.py  cold.py  live.py  orchestrator.py
vmigrate/proxmox/: __init__.py  agent.py  client.py  disk.py  network.py  vm_create.py
vmigrate/utils/: __init__.py  checksum.py  progress.py  retry.py  ssh.py
vmigrate/vmware/: __init__.py  client.py  export.py  inventory.py  snapshot.py
vmigrate/web/: __init__.py  app.py  models.py
vmigrate/web/routes/: __init__.py  connections.py  inventory.py  logs.py  migration.py
vmigrate/web/static/: index.html
